--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ header{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: #ffffff;
+  color: #000000;
 }
 
 .hamburguesa{
